<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/timA"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/namaA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/nama_tim"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/nilaiA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/setnilai"
                android:textSize="35sp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#f9920c"
                android:onClick="point3A"
                android:text="@string/button3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#f9920c"
                android:onClick="point2A"
                android:text="@string/button2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f9920c"
                android:onClick="freethrowA"
                android:text="@string/button1" />

        </LinearLayout>

        <View
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#999"
            android:layout_width="2dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timB"
                android:textSize="25sp"/>

            <TextView
                android:id="@+id/namaB"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_tim"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/nilaiB"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setnilai"
                android:textSize="35sp"/>

            <Button
                android:onClick="point3B"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:background="#f9920c"/>

            <Button
                android:onClick="point2B"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:background="#f9920c"/>

            <Button
                android:onClick="freethrowB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:background="#f9920c"/>

        </LinearLayout>
        
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:background="#f9920c"
        android:onClick="finish"
        android:text="RESET" />

</RelativeLayout>
